# willow-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  build.bat  cproject.toml
docs/: architecture_and_best_practices.md  evaluator_physics.md  provisioning.md  retargeter_kinematics.md  topology_and_transforms.md
examples/: 01_basic_detection.cpp  02_live_camera_stream.cpp  03_cloud_provisioning.cpp  04_evaluator_and_retargeter.cpp
include/: willow.hpp
tests/: test_golden_vector.cpp
